crates/rust_engine/refactor_test2.txt
**********************************************************************
** Visual Studio 2022 Developer Command Prompt v17.14.23
** Copyright (c) 2025 Microsoft Corporation
**********************************************************************
[vcvarsall.bat] Environment initialized for: 'x64'
warning: cortex_rust@0.1.0: Successfully compiled CUDA kernel to "C:\\Users\\Humin\\.gemini\\antigravity\\scratch\\new-ai-project\\Bit-TTT\\target\\debug\\build\\cortex_rust-e7e45ff7e898356d\\out\\bit_op.ptx"
   Compiling cortex_rust v0.1.0 (C:\Users\Humin\.gemini\antigravity\scratch\new-ai-project\Bit-TTT\crates\rust_engine)
warning: unused import: `DType`
 --> crates\rust_engine\tests\grad_test.rs:4:39
  |
4 |     use candle_core::{Device, Tensor, DType, Result};
  |                                       ^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
  --> crates\rust_engine\tests\grad_test.rs:67:13
   |
67 |         let mut grads_ref = loss_ref.backward()?;
   |             ----^^^^^^^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> crates\rust_engine\tests\grad_test.rs:122:13
    |
122 |         let mut grads_custom = loss_custom.backward()?;
    |             ----^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`

warning: unused variable: `x_var`
  --> crates\rust_engine\tests\grad_test.rs:35:13
   |
35 |         let x_var = candle_core::Var::from_tensor(&x)?;
   |             ^^^^^ help: if this is intentional, prefix it with an underscore: `_x_var`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `dw_ref`
  --> crates\rust_engine\tests\grad_test.rs:69:13
   |
69 |         let dw_ref = grads_ref.get(&w_var).unwrap();
   |             ^^^^^^ help: if this is intentional, prefix it with an underscore: `_dw_ref`

warning: unused variable: `y_custom`
  --> crates\rust_engine\tests\grad_test.rs:83:13
   |
83 |         let y_custom = x_t.apply_op2(w_t, (*op).clone())?;
   |             ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_y_custom`

error[E0560]: struct `BitLinear` has no field named `inference_params`
  --> crates\rust_engine\tests\bit_linear_test.rs:30:13
   |
30 |             inference_params: None,
   |             ^^^^^^^^^^^^^^^^ `BitLinear` does not have this field
   |
   = note: all struct fields are already assigned

For more information about this error, try `rustc --explain E0560`.
warning: cortex_rust@0.1.0: Successfully compiled CUDA kernel to "C:\\Users\\Humin\\.gemini\\antigravity\\scratch\\new-ai-project\\Bit-TTT\\target\\debug\\build\\cortex_rust-e7e45ff7e898356d\\out\\bit_op.ptx"
error: could not compile `cortex_rust` (test "bit_linear_test") due to 1 previous error
warning: build failed, waiting for other jobs to finish...
warning: `cortex_rust` (test "grad_test") generated 6 warnings (run `cargo fix --test "grad_test" -p cortex_rust` to apply 6 suggestions)
